--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
+    "newsapi": "^2.4.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "validator": "^13.1.1"
